--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
         <h1>Mi Portfolio || Guille Mendoza</h1>
-        
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, unde. Ab iusto illo similique doloremque exercitationem modi vero voluptatum, esse aliquam accusantium labore. Commodi perspiciatis nulla dolore animi maxime ullam.
+        </p>
 </body>
 </html>
