--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, unde. Ab iusto illo similique doloremque exercitationem modi vero voluptatum, esse aliquam accusantium labore. Commodi perspiciatis nulla dolore animi maxime ullam.
         </p>
+        <script src="./assets/js/main.js"></script>
 </body>
 </html>
