--- a/index.html
+++ b/index.html
@@ -3,14 +3,38 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- ICON -->
+        <link rel="shortcut icon" href="./assets/icons/favicon.jpg" type="image/x-icon">
+        <!-- CSS -->
         <link rel="stylesheet" href="./assets/css/index.css">
         <title>Mi Portfolio || Guille Mendoza</title>
 </head>
 <body>
-        <h1>Mi Portfolio || Guille Mendoza</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, unde. Ab iusto illo similique doloremque exercitationem modi vero voluptatum, esse aliquam accusantium labore. Commodi perspiciatis nulla dolore animi maxime ullam.
-        </p>
+        <header>
+                <div>Hola</div>
+                <div>Title</div>
+                <div>Contact</div>
+        </header>
+        <main>
+                <h1>Mi Portfolio || Guille Mendoza</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus, unde. Ab iusto illo similique doloremque exercitationem modi vero voluptatum, esse aliquam accusantium labore. Commodi perspiciatis nulla dolore animi maxime ullam.
+                </p>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                        <path fill="#273036" fill-opacity="1" d="M0,256L34.3,229.3C68.6,203,137,149,206,122.7C274.3,96,343,96,411,128C480,160,549,224,617,218.7C685.7,213,754,139,823,144C891.4,149,960,235,1029,250.7C1097.1,267,1166,213,1234,186.7C1302.9,160,1371,160,1406,160L1440,160L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path>
+                </svg>
+                <div class="main_content">
+                        <h1>Me llamo Guille, bienvenidos!</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime deleniti quasi nisi ipsam tenetur! Id dolorem quia, eos maiores, quod libero doloremque adipisci minima itaque recusandae delectus, dolor enim quam.</p>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#273036" fill-opacity="1" d="M0,32L30,69.3C60,107,120,181,180,181.3C240,181,300,107,360,101.3C420,96,480,160,540,160C600,160,660,96,720,80C780,64,840,96,900,122.7C960,149,1020,171,1080,170.7C1140,171,1200,149,1260,133.3C1320,117,1380,107,1410,101.3L1440,96L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path>
+                </svg>
+
+        </main>
+        <footer>
+
+        </footer>
         <script src="./assets/js/main.js"></script>
 </body>
 </html>
